--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "passport-local": "^1.0.0",
     "pdfjs-dist": "^5.4.449",
     "puppeteer": "^24.32.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -108,6 +109,7 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
