--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@sentry/node": "^10.31.0",
+    "@sentry/profiling-node": "^10.31.0",
+    "@sentry/react": "^10.31.0",
     "@tanstack/react-query": "^5.60.5",
     "@uppy/aws-s3": "^5.0.2",
     "@uppy/core": "^5.1.1",
