--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
+    "react-joyride": "^2.9.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "stripe": "^18.5.0",
