--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@clerk/clerk-react": "^5.57.0",
     "@clerk/express": "^1.7.53",
     "@dnd-kit/core": "^6.3.1",
