--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@calcom/embed-react": "^1.5.3",
     "@clerk/clerk-react": "^5.57.0",
     "@clerk/express": "^1.7.53",
     "@dnd-kit/core": "^6.3.1",
@@ -66,6 +65,7 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "html2canvas": "^1.4.1",
